// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArgumentVoteButton /> renders viewer has not voted 1`] = `
<Fragment>
  <Relay(Connect(RequirementsModal))
    handleClose={[Function]}
    show={false}
    step={
      Object {
        " $fragmentRefs": null,
        "requirements": Object {
          "viewerMeetsTheRequirements": true,
        },
      }
    }
  />
  <Connect(NewLoginOverlay)>
    <button
      className="btn btn-xs argument__btn--vote btn--outline btn-success"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        <i
          className="cap cap-hand-like-2"
        />
         
        <FormattedMessage
          id="global.ok"
          values={Object {}}
        />
      </span>
      <Relay(UnpublishedTooltip)
        publishable={null}
        target={[Function]}
      />
    </button>
  </Connect(NewLoginOverlay)>
</Fragment>
`;

exports[`<ArgumentVoteButton /> renders viewer has voted 1`] = `
<Fragment>
  <Relay(Connect(RequirementsModal))
    handleClose={[Function]}
    show={false}
    step={
      Object {
        " $fragmentRefs": null,
        "requirements": Object {
          "viewerMeetsTheRequirements": true,
        },
      }
    }
  />
  <Connect(NewLoginOverlay)>
    <button
      className="btn btn-xs argument__btn--vote btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        id="global.cancel"
        tagName="span"
        values={Object {}}
      />
      <Relay(UnpublishedTooltip)
        publishable={
          Object {
            " $fragmentRefs": null,
            "id": "vote1",
          }
        }
        target={[Function]}
      />
    </button>
  </Connect(NewLoginOverlay)>
</Fragment>
`;

exports[`<ArgumentVoteButton /> renders when viewer is author 1`] = `
<Fragment>
  <Relay(Connect(RequirementsModal))
    handleClose={[Function]}
    show={false}
    step={
      Object {
        " $fragmentRefs": null,
        "requirements": Object {
          "viewerMeetsTheRequirements": true,
        },
      }
    }
  />
  <Connect(NewLoginOverlay)>
    <button
      className="btn btn-xs argument__btn--vote btn--outline btn-success"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span>
        <i
          className="cap cap-hand-like-2"
        />
         
        <FormattedMessage
          id="global.ok"
          values={Object {}}
        />
      </span>
      <Relay(UnpublishedTooltip)
        publishable={null}
        target={[Function]}
      />
    </button>
  </Connect(NewLoginOverlay)>
</Fragment>
`;
